src/test/deca/context/invalid/homemade/modulo_non_entiers.deca
// Description :
//test of modulo operation with non int variables
//
// Resultats :
//Erreur contextuelle
//Ligne <10> : <Modulo operands must be int and are float and float>
{
   float a = 2;
   float b = 7;
   b = b%a;

}